Creating headers and titles

--- a/CollegeWebsiteHelper.html
+++ b/CollegeWebsiteHelper.html
@@ -8,19 +8,20 @@
     <body>
 
         <header>
-            <nav>
-                <ul>
-                    <li><a href="#Tab1">Tab1</a></li>
-                    <li><a href="#Tab2">Tab2</a></li>
-                    <li><a href="#Tab3">Tab3</a></li>
-                </ul>
-            </nav>
+            <h1>College Website Helper</h1>
         </header>
 
+
+
         <main>
+            <section id ="nav">
+                <p>link1</p>
+                <p>link2</p>
+                <p>link3</p>
+            </section>
             <section id="Tab1">
                 <div class="a">
-                    <h1>College Website Helper</h1>
+                    <h1>Tab 1 (tips tips tips)</h1>
                 </div>
             </section>
             <section id="Tab2">
