--- a/CollegeWebsiteHelper.html
+++ b/CollegeWebsiteHelper.html
@@ -14,11 +14,13 @@
 
 
         <main>
-            <section id ="nav">
-                <p>link1</p>
-                <p>link2</p>
-                <p>link3</p>
-            </section>
+            <div class="nav">
+                <a class="active" href="#home">Home</a>
+                <a href="#Tab1"Tab1></a>
+                <a href="#Tab2"Tab2></a>
+                <a href="#Tab3"Tab3></a>
+            </div>
+
             <section id="Tab1">
                 <div class="a">
                     <h1>Tab 1 (tips tips tips)</h1>
