--- a/CollegeWebsiteHelper.html
+++ b/CollegeWebsiteHelper.html
@@ -44,7 +44,9 @@
                 </div>
             </section>
             <section id="JavaScript Test">
-                
+                <div class="a">
+                    <p id = "ctext">woohoo this should change</p>
+                    <button type="button" onclick="document.getElementById('ctext').innerHTML = 'BOOM'">Change the text!</button>
             </section>
         </main>
         <footer>
