--- a/page1.html
+++ b/page1.html
@@ -40,7 +40,19 @@
                 </div>
             </section>
             <section id="JavaScript Test">
-                
+                <div class="a">
+                    <p id = "ctext">woohoo this should change</p>
+                    <button type="button" onclick="document.getElementById('ctext').innerHTML = 'BOOM'">Change the text!</button>
+                    <p id = "sumn3"></p>
+                    <p id = "otherline">The number is: 11</p>
+                    <script>
+                        var n1 = 5;
+                        var n2 = 6;
+                        var n3 = n1 + n2;
+                        var text = "The number is: "
+                        <!--document.getElementById("sumn3").innerHTML = text + n3;-->
+                    </script>
+                </div>
             </section>
         </main>
         <footer>
