reorganized all files

--- a/page2.html
+++ b/page2.html
@@ -22,7 +22,7 @@
             </div>
 
            
-            <section id="Tab3">
+            <section id="Page2">
                 <div class="a">
                     <h2>General tips on how to survive college!</h2>
                     <p>There are no tips in surviving college, which is the truth. The sad fact abiout college
