Made the Home link work

--- a/home.html
+++ b/home.html
@@ -20,16 +20,14 @@
                 <a href="./page2.html">page2</a>
                 <a href="./page3.html">page3</a>
             </div>
-            
-            <section id="page1">
-                <div class="a">
-                    <h2>College GPA Calculator</h2>
-                    <p>Input your score in the given function and it wil calculate the how much percent 
-                        you need for your next exam in order to increase your grade by one!
-                    </p>
-                </div>
-            </section>
 
+            <section id="Home">
+                    <div class="a">
+                        <h1>HOMEPAGE</h1>
+                    </div>
+                </section>
+
+            </section>
             <section id="JavaScript Test">
                 <div class="a">
                     <p id = "ctext">woohoo this should change</p>
@@ -41,7 +39,7 @@
                         var n2 = 6;
                         var n3 = n1 + n2;
                         var text = "The number is: "
-                        <!--document.getElementById("sumn3").innerHTML = text + n3;-->
+                        document.getElementById("sumn3").innerHTML = text + n3;
                     </script>
                 </div>
             </section>
