--- a/page2.html
+++ b/page2.html
@@ -15,14 +15,14 @@
 
         <main>
             <div class="nav">
-                <a class="active" href="#home">Home</a>
+                <a href="./home.html">Home</a>
                 <a href="./page1.html">page1</a>
                 <a href="./page2.html">page2</a>
                 <a href="./page3.html">page3</a>
-            </div>
+                </div>
 
            
-            <section id="Page2">
+            <section id="page2">
                 <div class="a">
                     <h2>General tips on how to survive college!</h2>
                     <p>There are no tips in surviving college, which is the truth. The sad fact abiout college
