--- a/page3.html
+++ b/page3.html
@@ -15,33 +15,13 @@
 
         <main>
             <div class="nav">
-                <a class="active" href="#home">Home</a>
+                <a href="./home.html">Home</a>
                 <a href="./page1.html">page1</a>
                 <a href="./page2.html">page2</a>
                 <a href="./page3.html">page3</a>
             </div>
 
-            <section id="Tab1">
-                <div class="a">
-                    <h1>Tab 1 (tips tips tips)</h1>
-                </div>
-            </section>
-            <section id="Tab2">
-                <div class="a">
-                    <h2>College GPA Calculator</h2>
-                    <p>Input your score in the given function and it wil calculate the how much percent 
-                        you need for your next exam in order to increase your grade by one!
-                    </p>
-                </div>
-            </section>
-            <section id="Tab3">
-                <div class="a">
-                    <h2>General tips on how to survive college!</h2>
-                    <p>There are no tips in surviving college, which is the truth. The sad fact abiout college
-                        is that you have to grind crazily until you get the grades you want, and then you have 
-                        to start worrying about internships and jobs and etc etc etc etc.
-                    </p>
-                </div>
+            
             </section>
             
             <section id="JavaScript Test">
