--- a/CollegeWebsiteHelper.html
+++ b/CollegeWebsiteHelper.html
@@ -15,7 +15,7 @@
 
         <main>
             <div class="nav">
-                <a class="./CollegeWebsiteHelper.html" href="#home">Home</a>
+                <a href="./home.html">Home</a>
                 <a href="./page1.html">page1</a>
                 <a href="./page2.html">page2</a>
                 <a href="./page3.html">page3</a>
