--- a/page1.html
+++ b/page1.html
@@ -42,7 +42,7 @@
                         var n2 = 6;
                         var n3 = n1 + n2;
                         var text = "The number is: "
-                        <!--document.getElementById("sumn3").innerHTML = text + n3;-->
+                        document.getElementById("sumn3").innerHTML = text + n3;
                     </script>
                 </div>
             </section>
