made minor edits

--- a/CollegeWebsiteHelper.html
+++ b/CollegeWebsiteHelper.html
@@ -21,7 +21,12 @@
                 <a href="./page3.html">page3</a>
             </div>
 
-            
+            <section id="Home">
+                    <div class="a">
+                        <h1>HOMEPAGE</h1>
+                    </div>
+                </section>
+
             </section>
             <section id="JavaScript Test">
                 <div class="a">
