--- a/home.html
+++ b/home.html
@@ -22,14 +22,14 @@
             </div>
 
             <section id="Home">
-                    <div class="a">
+                    <div class="title">
                         <h1>HOMEPAGE</h1>
                     </div>
                 </section>
 
             </section>
             <section id="JavaScript Test">
-                <div class="a">
+                <div class="b">
                     <p id = "ctext">woohoo this should change</p>
                     <button type="button" onclick="document.getElementById('ctext').innerHTML = 'BOOM'">Change the text!</button>
                     <p id = "sumn3"></p>
@@ -45,7 +45,9 @@
             </section>
         </main>
         <footer>
-            Created by Alex, Alina and Nathan
+            <div class="footer">
+                Created by Alex, Alina and Nathan
+            </div>
         </footer>
     </body>
 
