--- a/page2.html
+++ b/page2.html
@@ -23,8 +23,10 @@
 
            
             <section id="page2">
-                <div class="a">
+                <div class="title">
                     <h2>General tips on how to survive college!</h2>
+                </div>
+                <div class="para">
                     <p>There are no tips in surviving college, which is the truth. The sad fact abiout college
                         is that you have to grind crazily until you get the grades you want, and then you have 
                         to start worrying about internships and jobs and etc etc etc etc.
@@ -36,7 +38,9 @@
             </section>
         </main>
         <footer>
-            Created by Alex, Alina and Nathan
+            <div class="b">
+                Created by Alex, Alina and Nathan
+            </div>
         </footer>
     </body>
 
