--- a/page3.html
+++ b/page3.html
@@ -21,7 +21,17 @@
                 <a href="./page3.html">page3</a>
             </div>
 
-            
+            <section id="page3">
+                    <div class="title">
+                        <h2>Page 3: What do we put here?</h2>
+                    </div>
+                    <div class="para">
+                        <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
+                            Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
+                            Lorem ipsum 
+                        </p>
+                    </div>
+                </section>
             </section>
             
             <section id="JavaScript Test">
@@ -29,7 +39,9 @@
             </section>
         </main>
         <footer>
-            Created by Alex, Alina and Nathan
+            <div class="b">
+                Created by Alex, Alina and Nathan
+            </div>
         </footer>
     </body>
 
