--- a/page1.html
+++ b/page1.html
@@ -22,8 +22,10 @@
             </div>
             
             <section id="page1">
-                <div class="a">
+                <div class="title">
                     <h2>College GPA Calculator</h2>
+                </div>
+                <div class="para">
                     <p>Input your score in the given function and it wil calculate the how much percent 
                         you need for your next exam in order to increase your grade by one!
                     </p>
@@ -47,7 +49,9 @@
             </section>
         </main>
         <footer>
-            Created by Alex, Alina and Nathan
+            <div class="b">
+                Created by Alex, Alina and Nathan
+            </div>
         </footer>
     </body>
 
