reorganized all the files

--- a/page1.html
+++ b/page1.html
@@ -49,7 +49,7 @@
             </section>
         </main>
         <footer>
-            <div class="b">
+            <div class="footer">
                 Created by Alex, Alina and Nathan
             </div>
         </footer>
