--- a/page2.html
+++ b/page2.html
@@ -38,7 +38,7 @@
             </section>
         </main>
         <footer>
-            <div class="b">
+            <div class="footer">
                 Created by Alex, Alina and Nathan
             </div>
         </footer>
