--- a/page1.html
+++ b/page1.html
@@ -34,8 +34,8 @@
 
             <section id="JavaScript Test">
                 <div class="a">
-                    <p id = "ctext">woohoo this should change</p>
-                    <button type="button" onclick="document.getElementById('ctext').innerHTML = 'BOOM'">Change the text!</button>
+                    //<p id = "ctext">woohoo this should change</p>
+                    //<button type="button" onclick="document.getElementById('ctext').innerHTML = 'BOOM'">Change the text!</button>
                     <p id = "sumn3"></p>
                     <p id = "otherline">The number is: 11</p>
                     <script>
