--- a/home.html
+++ b/home.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>College Website Helper</title>
+        <title>Add Title Here</title>
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
 
         <header>
-            <h1>College Website Helper</h1>
+            <h1>Add Header 1 here</h1>
         </header>
 
 
