--- a/page1.html
+++ b/page1.html
@@ -8,7 +8,7 @@
     <body>
 
         <header>
-            <h1>Add Header 1 here</h1>
+            <h1>Take your time to relieve stress!</h1>
         </header>
 
 
