--- a/page1.html
+++ b/page1.html
@@ -33,7 +33,7 @@
             </section>
 
             <section id="JavaScript Test">
-                <div class="a">
+                <div class="para">
                     //<p id = "ctext">woohoo this should change</p>
                     //<button type="button" onclick="document.getElementById('ctext').innerHTML = 'BOOM'">Change the text!</button>
                     <p id = "sumn3"></p>
