CSS - Added black bar and edited navigation bar with css.

--- a/page3.html
+++ b/page3.html
@@ -40,7 +40,7 @@
         </main>
         <footer>
             <div class="footer">
-                Created by Alex, Alina and Nathan
+                <p>Created by Alina, Jin Young (Alex) and Nathan</p>
             </div>
         </footer>
     </body>
