--- a/page1.html
+++ b/page1.html
@@ -16,7 +16,7 @@
         <main>
             <div class="nav">
                 <a href="./home.html">Home</a>
-                <a href="./page1.html">page1</a>
+                <a href="./page1.html">Grade Calculator</a>
                 <a href="./page2.html">page2</a>
                 <a href="./page3.html">page3</a>
             </div>
