--- a/home.html
+++ b/home.html
@@ -28,6 +28,14 @@
                     <div class="para">
                         <p> This website is made as a student guide to surviving college. With all of the stress and activities going on, this website is meant to make a student's life easier and more organized. Calculate your grades, take time to manage your stress levels, read up on tips on how to manage yourself in college and more!
                         </p>
+                        <p> This website is made as a student guide to surviving college. With all of the stress and activities going on, this website is meant to make a student's life easier and more organized. Calculate your grades, take time to manage your stress levels, read up on tips on how to manage yourself in college and more!
+                        </p>
+                        <p> This website is made as a student guide to surviving college. With all of the stress and activities going on, this website is meant to make a student's life easier and more organized. Calculate your grades, take time to manage your stress levels, read up on tips on how to manage yourself in college and more!
+                        </p>
+                        <p> This website is made as a student guide to surviving college. With all of the stress and activities going on, this website is meant to make a student's life easier and more organized. Calculate your grades, take time to manage your stress levels, read up on tips on how to manage yourself in college and more!
+                        </p>
+                        <p> This website is made as a student guide to surviving college. With all of the stress and activities going on, this website is meant to make a student's life easier and more organized. Calculate your grades, take time to manage your stress levels, read up on tips on how to manage yourself in college and more!
+                        </p>
                     </div>
                 </section>
 
