--- a/page1_js.html
+++ b/page1_js.html
@@ -51,8 +51,8 @@
                     <p id="theClass"></p>
                     <p id="currentGrade"></p>
         
-                    <div style="block" id="texttoshow">
-                        <button onclick="reload()" id="reloadButton">test</button>
+                    <div style="display:none" id="texttoshow">
+                        <button onclick="reload()" id="reloadButton">Try another class!</button>
                     </div>
                     
 
@@ -63,7 +63,7 @@
                         }
                         function gradeCalc(){
                             var className = document.getElementById("className").value;
-                            document.getElementById("theClass").innerHTML = className;
+                            document.getElementById("theClass").innerHTML = "Information about your class, " + className;
                             var g1 = document.getElementById("g1").value;
                             var g2 = document.getElementById("g2").value;
                             var p1 = document.getElementById("p1").value;
@@ -71,11 +71,8 @@
                             var finalGrade = (g1*p1) + (g2*p2);
                             document.getElementById("currentGrade").innerHTML = "Your final grade is: " + finalGrade;
 
-                            var n3 = n1 + n2;
-                            var text = "The number is: "
-                            document.getElementById("sumn3").innerHTML = text + n3;
-                            var test = document.getElementById("reloadButton");
-                            test.value = "Try another class!";
+                            //var test = document.getElementById("reloadButton");
+                            //test.value = "Try another class!";
                             document.getElementById("texttoshow").style.display = "inline";
                         }
                     </script>
