--- a/home.html
+++ b/home.html
@@ -39,6 +39,7 @@
                     </div>
                     <div class="video">
                         <p>Below is a video to get you started on organizing life!</p>
+                        <video src="https://youtu.be/88MjoZalHpM" controls></video>
                     </div>
                 </section>
 
