--- a/page1.html
+++ b/page1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Add Title Here</title>
+        <title>Grade Calculator</title>
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
 
