changed homepage color

--- a/home.html
+++ b/home.html
@@ -22,6 +22,7 @@
             </div>
 
             <section id="Home">
+                <div class="homepage">
                     <div class="title">
                         <h1>HOMEPAGE</h1>
                     </div>
@@ -41,8 +42,7 @@
                         <p>Below is a video to get you started on organizing life!</p>
                         <video src="https://youtu.be/88MjoZalHpM" controls></video>
                     </div>
-                
-
+                </div>
             </section>
             
         </main>
