--- a/page1_js.html
+++ b/page1_js.html
@@ -38,16 +38,18 @@
 
                     <p>Class Name:</p>
                     <input type="text" id="className" value="">
-                    <p>Grade Type 1:</p>
+                    <p>Catagory 1 Grade:</p>
                     <input id="g1" value="">
-                    <p>Grade Type 2:</p>
+                    <p>Catagory 2 Grade:</p>
                     <input id="g2" value="">
-                    <p>Grade 1 Percent:</p>
+                    <p>Catagory 1 Weight:</p>
                     <input  id="p1" value="">
-                    <p>Grade 2 Percent:</p>
+                    <p>Catagory 2 Weight:</p>
                     <input id="p2" value="">
                     <br>
+                    <br>
                     <button onclick="gradeCalc()">Calculate!</button>
+                    <p id="validness"></p>
                     <p id="theClass"></p>
                     <p id="currentGrade"></p>
         
@@ -62,12 +64,37 @@
                             location.reload();
                         }
                         function gradeCalc(){
-                            var className = document.getElementById("className").value;
-                            document.getElementById("theClass").innerHTML = "Information about your class, " + className;
+                            //obtaining information
+                            var className = document.getElementById("className").value; 
+                            var values = [];
                             var g1 = document.getElementById("g1").value;
                             var g2 = document.getElementById("g2").value;
                             var p1 = document.getElementById("p1").value;
                             var p2 = document.getElementById("p2").value;
+                            values.push(g1);
+                            values.push(g2);
+                            values.push(p1);
+                            values.push(p2);
+                            var validcounter = 0;
+                            for(i = 0; i < 4; i++) {
+                                 var temp = values.pop();
+                                 if (temp <= 0) {
+                                     validcounter++;
+                                 }
+                             }
+                            document.getElementById("validness").innerHTML = "";
+                            if(validcounter > 0) {
+                                document.getElementById("validness").innerHTML = "Please Input Valid Values";
+                                return;
+                            }
+
+                            if(className == "") {
+                                document.getElementById("theClass").innerHTML = "Information about your unspecified class:"
+                            }
+                            else {
+                                document.getElementById("theClass").innerHTML = "Information about your class, " + className + ":";
+                            }
+                            
                             var finalGrade = (g1*p1) + (g2*p2);
                             document.getElementById("currentGrade").innerHTML = "Your final grade is: " + finalGrade;
 
