--- a/page1.html
+++ b/page1.html
@@ -78,7 +78,7 @@
                             var validcounter = 0;
                             for(i = 0; i < 4; i++) {
                                  var temp = values.pop();
-                                 if (temp <= 0) {
+                                 if (temp <= 0 | temp > 100) {
                                      validcounter++;
                                  }
                              }
