--- a/page2_js.html
+++ b/page2_js.html
@@ -4,38 +4,38 @@
             <h2>See how stressed you are!</h2>
             <p>Question 1</p>
             <form>
-                <li><input type="radio" name="1" id="1-1">ans1</li>
-                <li><input type="radio" name="1" id="1-2">ans2</li>
-                <li><input type="radio" name="1" id="1-3">ans3</li>
-                <li><input type="radio" name="1" id="1-4">ans4</li>
+                <li><input type="radio" name="1" value="1-1">ans1</li>
+                <li><input type="radio" name="1" value="1-2">ans2</li>
+                <li><input type="radio" name="1" value="1-3">ans3</li>
+                <li><input type="radio" name="1" value="1-4">ans4</li>
             </form>
             <p>Question 2</p>
             <form>
-                <li><input type="radio" name="2" id="2-1">ans1</li>
-                <li><input type="radio" name="2" id="2-2">ans2</li>
-                <li><input type="radio" name="2" id="2-3">ans3</li>
-                <li><input type="radio" name="2" id="2-4">ans4</li>
+                <li><input type="radio" name="2" value="2-1">ans1</li>
+                <li><input type="radio" name="2" value="2-2">ans2</li>
+                <li><input type="radio" name="2" value="2-3">ans3</li>
+                <li><input type="radio" name="2" value="2-4">ans4</li>
             </form>
             <p>Question 3</p>
             <form>
-                <li><input type="radio" name="3" id="3-1">ans1</li>
-                <li><input type="radio" name="3" id="3-2">ans2</li>
-                <li><input type="radio" name="3" id="3-3">ans3</li>
-                <li><input type="radio" name="3" id="3-4">ans4</li>
+                <li><input type="radio" name="3" value="3-1">ans1</li>
+                <li><input type="radio" name="3" value="3-2">ans2</li>
+                <li><input type="radio" name="3" value="3-3">ans3</li>
+                <li><input type="radio" name="3" value="3-4">ans4</li>
             </form>
             <p>Question 4</p>
             <form>
-                <li><input type="radio" name="4" id="4-1">ans1</li>
-                <li><input type="radio" name="4" id="4-2">ans2</li>
-                <li><input type="radio" name="4" id="4-3">ans3</li>
-                <li><input type="radio" name="4" id="4-4">ans4</li>
+                <li><input type="radio" name="4" value="4-1">ans1</li>
+                <li><input type="radio" name="4" value="4-2">ans2</li>
+                <li><input type="radio" name="4" value="4-3">ans3</li>
+                <li><input type="radio" name="4" value="4-4">ans4</li>
             </form>
             <p>Question 5</p>
             <form>
-                <li><input type="radio" name="5" id="5-1">ans1</li>
-                <li><input type="radio" name="5" id="5-2">ans2</li>
-                <li><input type="radio" name="5" id="5-3">ans3</li>
-                <li><input type="radio" name="5" id="5-4">ans4</li>
+                <li><input type="radio" name="5" value="5-1">ans1</li>
+                <li><input type="radio" name="5" value="5-2">ans2</li>
+                <li><input type="radio" name="5" value="5-3">ans3</li>
+                <li><input type="radio" name="5" value="5-4">ans4</li>
             </form>
             <br>
             <button onclick="stressCalc()">Find out your stress level!</button>
@@ -51,11 +51,11 @@
 
 
                     
-                    if (a = document.getElementById("1-1")) {
+                    if (a == "ans1") {
                         var a = 1
-                    } else if (a = document.getElementById("1-2")) {
+                    } else if (a == "ans2") {
                         var a = 2
-                    } else if (a = document.getElementById("1-3")) {
+                    } else if (a == "ans3") {
                         var a = 3
                     } else if (a = document.getElementById("1-4")) {
                         var a = 4
@@ -91,7 +91,7 @@
                         var d = 4
                     }
 
-                    if (e = document.getElementById("5-1")) {
+                    if (e === document.getElementById("5-1")) {
                         var e = 1
                     } else if (e = document.getElementById("5-2")) {
                         var e = 2
