refreshing every button press

--- a/page1.html
+++ b/page1.html
@@ -83,6 +83,10 @@
                                  }
                              }
                             document.getElementById("validness").innerHTML = "";
+                            document.getElementById("theClass").innerHTML = "";
+                            document.getElementById("currentGrade").innerHTML = "";
+
+
                             if(validcounter > 0) {
                                 document.getElementById("validness").innerHTML = "Please Input Valid Values";
                                 return;
