--- a/page1.html
+++ b/page1.html
@@ -17,7 +17,7 @@
             <div class="nav">
                 <a href="./home.html">Home</a>
                 <a href="./page1.html">Grade Calculator</a>
-                <a href="./page2.html">General Tips</a>
+                <a href="./page2.html">Stress Calculator</a>
                 <a href="./page3.html">page3</a>
             </div>
             
