--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>General Tips</title>
+        <title>Release your stress!</title>
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
 
@@ -17,7 +17,7 @@
             <div class="nav">
                 <a href="./home.html">Home</a>
                 <a href="./page1.html">Grade Calculator</a>
-                <a href="./page2.html">General Tips</a>
+                <a href="./page2.html">Stress Calculator</a>
                 <a href="./page3.html">page3</a>
                 </div>
 
