--- a/page1.html
+++ b/page1.html
@@ -23,11 +23,11 @@
             
             <section id="page1">
                 <div class="title">
-                    <h2>College GPA Calculator</h2>
+                    <h2>The Ultimate Grade Calculator</h2>
                 </div>
                 <div class="para">
                     <p>Input your score in the given function and it wil calculate the how much percent 
-                        you need for your next exam in order to increase your grade by one!
+                        you need for your next exam in order to get your desired score!
                     </p>
                 </div>
             </section>
