--- a/home.html
+++ b/home.html
@@ -22,7 +22,6 @@
             </div>
 
             <section id="Home">
-                <div class="homepage">
                     <div class="title">
                         <h1>HOMEPAGE</h1>
                     </div>
@@ -42,7 +41,12 @@
                         <p>Below is a video to get you started on organizing life!</p>
                         <video src="https://youtu.be/88MjoZalHpM" controls></video>
                     </div>
-                </div>
+                    <div class="container">
+                        <img src="https://i.ytimg.com/vi/PLAJTuLNI7A/maxresdefault.jpg" alt="Avatar" class="image" style="width:100%">
+                        <div class="middle">
+                            <div class="text">Destress</div>
+                        </div>
+                    </div>
             </section>
             
         </main>
