--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
                     <div class="container">
                         <img src="https://i.ytimg.com/vi/PLAJTuLNI7A/maxresdefault.jpg" alt="Avatar" class="image" style="width:100%">
                         <div class="middle">
-                            <div class="text">Destress</div>
+                            <div class="text">Explore the site to develop a more organized lifestyle!</div>
                         </div>
                     </div>
             </section>
