finalized stress calculator

--- a/page1.html
+++ b/page1.html
@@ -36,15 +36,15 @@
                 <div class="para">
 
 
-                    <p>Class Name:</p>
+                    <h4>Class Name:</h4>
                     <input type="text" id="className" value="">
-                    <p>Catagory 1 Grade:</p>
+                    <h4>Category 1 Grade:</h4>
                     <input id="g1" value="">
-                    <p>Catagory 2 Grade:</p>
+                    <h4>Category 2 Grade:</h4>
                     <input id="g2" value="">
-                    <p>Catagory 1 Weight:</p>
+                    <h4>Category 1 Weight:</h4>
                     <input  id="p1" value="">
-                    <p>Catagory 2 Weight:</p>
+                    <h4>Category 2 Weight:</h4>
                     <input id="p2" value="">
                     <br>
                     <br>
