--- a/home.html
+++ b/home.html
@@ -26,21 +26,13 @@
                         <h1>HOMEPAGE</h1>
                     </div>
                     <div class="para">
-                        <p> This website is made as a student guide to surviving college. With all of the stress and activities going on, this website is meant to make a student's life easier and more organized. Calculate your grades, take time to manage your stress levels, read up on tips on how to manage yourself in college and more!
-                        </p>
-                        <p> This website is made as a student guide to surviving college. With all of the stress and activities going on, this website is meant to make a student's life easier and more organized. Calculate your grades, take time to manage your stress levels, read up on tips on how to manage yourself in college and more!
-                        </p>
-                        <p> This website is made as a student guide to surviving college. With all of the stress and activities going on, this website is meant to make a student's life easier and more organized. Calculate your grades, take time to manage your stress levels, read up on tips on how to manage yourself in college and more!
-                        </p>
-                        <p> This website is made as a student guide to surviving college. With all of the stress and activities going on, this website is meant to make a student's life easier and more organized. Calculate your grades, take time to manage your stress levels, read up on tips on how to manage yourself in college and more!
-                        </p>
-                        <p> This website is made as a student guide to surviving college. With all of the stress and activities going on, this website is meant to make a student's life easier and more organized. Calculate your grades, take time to manage your stress levels, read up on tips on how to manage yourself in college and more!
-                        </p>
+                        
                     </div>
                     <div class="container">
                         <img src="https://i.ytimg.com/vi/PLAJTuLNI7A/maxresdefault.jpg" alt="Avatar" class="image" style="width:100%">
                         <div class="middle">
-                            <div class="text">Explore the site to develop a more organized lifestyle!</div>
+                            <div class="text"><p> This website is made as a student guide to surviving college. With all of the stress and activities going on, this website is meant to make a student's life easier and more organized. Calculate your grades, take time to manage your stress levels, read up on tips on how to manage yourself in college and more!</p>
+                            </div>
                         </div>
                     </div>
             </section>
