remove width image

--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
                         <h1>HOMEPAGE</h1>
                     </div>
                     <div class="container">
-                        <img src="https://i.ytimg.com/vi/PLAJTuLNI7A/maxresdefault.jpg" alt="Avatar" class="image" style="width:100%">
+                        <img src="https://i.ytimg.com/vi/PLAJTuLNI7A/maxresdefault.jpg" alt="Avatar" class="image">
                         <div class="middle">
                             <div class="text"><p> This website is made as a student guide to surviving college. With all of the stress and activities going on, this website is meant to make a student's life easier and more organized. Calculate your grades, take time to manage your stress levels, read up on tips on how to manage yourself in college and more!</p>
                             </div>
