90% working on grade calculator, final grade with current percentages not working

--- a/page1.html
+++ b/page1.html
@@ -46,12 +46,15 @@
                     <input  id="p1" value="">
                     <h4>Category 2 Weight:</h4>
                     <input id="p2" value="">
+                    <h4>Final Weight (Optional):</h4>
+                    <input id="finalex" value="">
                     <br>
                     <br>
                     <button onclick="gradeCalc()">Calculate!</button>
-                    <p id="validness"></p> <!--not nessisary -->
                     <p id="theClass"></p>
                     <p id="currentGrade"></p>
+                    <p id="get90"></p>
+
         
                     <div style="display:none" id="texttoshow">
                         <button onclick="reload()" id="reloadButton">Try another class!</button>
@@ -71,6 +74,7 @@
                             var g2 = document.getElementById("g2").value;
                             var p1 = document.getElementById("p1").value;
                             var p2 = document.getElementById("p2").value;
+                            var finalex = document.getElementById("finalex").value;
                             values.push(g1);
                             values.push(g2);
                             values.push(p1);
@@ -82,7 +86,7 @@
                                      validcounter++;
                                  }
                              }
-                            //document.getElementById("validness").innerHTML = "";
+                            document.getElementById("get90").innerHTML = "";
                             document.getElementById("theClass").innerHTML = "";
                             document.getElementById("currentGrade").innerHTML = "";
 
@@ -99,8 +103,12 @@
                                 document.getElementById("theClass").innerHTML = "Information about your class, " + className + ":";
                             }
                             
-                            var finalGrade = (g1*p1) + (g2*p2);
+                            var finalGrade = (((g1*p1*.01) + (g2*p2*.01))/((p1+p2)))*100;
                             document.getElementById("currentGrade").innerHTML = "Your final grade is: " + finalGrade;
+
+                            var toget90 = 90 - ((g1*p1*.01) + (g2*p2*.01)) + 0.0;
+                            toget90 = (toget90/finalex)*100;
+                            document.getElementById("get90").innerHTML = "You need to get a " + toget90 + " to get a 90";
 
                             //var test = document.getElementById("reloadButton");
                             //test.value = "Try another class!";
