--- a/page3.html
+++ b/page3.html
@@ -3,6 +3,8 @@
     <head>
         <title>Add Title Here</title>
         <link href="style.css" rel="stylesheet" type="text/css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     </head>
 
     <body>
