--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <body>
 
         <header>
-            <h1>Take your time to relieve stress!</h1>
+            <h1>Take your time to relieve stress!!</h1>
         </header>
 
 
