--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Release your stress!</title>
         <link href="style.css" rel="stylesheet" type="text/css">
