Added meet this person thing

--- a/home-bs.html
+++ b/home-bs.html
@@ -68,23 +68,70 @@
         <!--- Two Column Section -->
         <div class="container-fluid padding">
         <div class="row padding">
-            <div class="col-md-12 col-lg-6">
+            <div class="col-lg-12">
                 <h2>Why Coll[a]ge?</h2>
                 <p>Because Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
-                    Lorem ipsum</p>
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
             </div>   
         </div>
         </div>
 
         <!--- Fixed background -->
-
+        <figure>
+            <div class="fixed-wrap">
+                <div id="fixed">
+                </div>
+            </div>
+        </figure>
         
         <!--- Meet the team -->
-
+        <div class="container-fluid padding">
+        <div class="row welcome text-center">
+            <div class="col-12">
+                <h1 class="display-4">Meet the creators!</h1>
+            </div>
+            <hr>
+        </div>
+        </div>
 
         <!--- Cards -->
+        <div class="container-fluid padding">
+        <div class="row padding">
+            <div class="col-md-4">
+                <div class="card">
+                    <h4 class="card-title">Alina</h4>
+                    <p class="card-text">Hi my name is Alina and ahfhfjhjsjfkhgirewjknfbdjhkndmbhjksdn
+                        sfdjkhbiujsnmhjksdmnbjksldmnvbdfjhkslmhkbjsnlbhsjlmnbkgjfdsnjkslnm,vbjkhfslmnv
+                        nfdkbhuojsnm,jksmnjks
 
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                    <div class="card">
+                        <h4 class="card-title">Alex</h4>
+                        <p class="card-text">Hi my name is Alex and ahfhfjhjsjfkhgirewjknfbdjhkndmbhjksdn
+                                sfdjkhbiujsnmhjksdmnbjksldmnvbdfjhkslmhkbjsnlbhsjlmnbkgjfdsnjkslnm,vbjkhfslmnv
+                                nfdkbhuojsnm,jksmnjks
+
+                        </p>
+                    </div>
+                </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <h4 class="card-title">Nathan</h4>
+                    <p class="card-text">Hi my name is Nathan and ahfhfjhjsjfkhgirewjknfbdjhkndmbhjksdn
+                            sfdjkhbiujsnmhjksdmnbjksldmnvbdfjhkslmhkbjsnlbhsjlmnbkgjfdsnjkslnm,vbjkhfslmnv
+                            nfdkbhuojsnm,jksmnjks
+
+                    </p>
+                </div>
+            </div>
+        </div>
+        </div>
 
         <!--- Two Column Section -->
 
@@ -93,7 +140,11 @@
 
 
         <!--- Footer -->
-
+        <footer>
+            <div class="footer">
+                <p>Created by Alina, Jin Young (Alex) and Nathan</p>
+            </div>
+        </footer>
 
 </body>
 </html>
