additional edits on bs

--- a/home-bs.html
+++ b/home-bs.html
@@ -60,6 +60,7 @@
                 going on, this website is meant to make a student's life easier and more organized. Calculate your grades, 
                 take time to manage your stress levels, read up on tips on how to manage yourself in college and more!</p>
         </div>
+        <hr class="light">
         </div>
 
         <!--- Three Column Section -->
@@ -75,6 +76,7 @@
                     Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
                     Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
                     Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
+                    <hr class="light">
             </div>   
         </div>
         </div>
@@ -102,47 +104,45 @@
         <div class="row padding">
             <div class="col-md-4">
                 <div class="card">
-                    <h4 class="card-title">Alina</h4>
-                    <p class="card-text">Hi my name is Alina and ahfhfjhjsjfkhgirewjknfbdjhkndmbhjksdn
-                        sfdjkhbiujsnmhjksdmnbjksldmnvbdfjhkslmhkbjsnlbhsjlmnbkgjfdsnjkslnm,vbjkhfslmnv
-                        nfdkbhuojsnm,jksmnjks
-
-                    </p>
-                </div>
-            </div>
-            <div class="col-md-4">
-                    <div class="card">
-                        <h4 class="card-title">Alex</h4>
-                        <p class="card-text">Hi my name is Alex and ahfhfjhjsjfkhgirewjknfbdjhkndmbhjksdn
-                                sfdjkhbiujsnmhjksdmnbjksldmnvbdfjhkslmhkbjsnlbhsjlmnbkgjfdsnjkslnm,vbjkhfslmnv
-                                nfdkbhuojsnm,jksmnjks
+                    <div class="card-body">
+                        <h4 class="card-title">Alina</h4>
+                        <p class="card-text">Hi my name is Alina and I'm a sophomore attending University of Massachusetts
+                            Amherst!
 
                         </p>
                     </div>
                 </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <h4 class="card-title">Nathan</h4>
-                    <p class="card-text">Hi my name is Nathan and ahfhfjhjsjfkhgirewjknfbdjhkndmbhjksdn
-                            sfdjkhbiujsnmhjksdmnbjksldmnvbdfjhkslmhkbjsnlbhsjlmnbkgjfdsnjkslnm,vbjkhfslmnv
-                            nfdkbhuojsnm,jksmnjks
-
-                    </p>
-                </div>
             </div>
+            <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title">Alex</h4>
+                            <p class="card-text">Hi my name is Alex and I'm a freshman attending Boston University!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title">Nathan</h4>
+                            <p class="card-text">Hi my name is Nathan and I'm a sophomore attending University of Massachusetts
+                                Amherst!
+                            </p>
+                        </div>
+                    </div>
+                </div>
         </div>
-        </div>
-
-        <!--- Two Column Section -->
-
-
-        <!--- Connect -->
-
 
         <!--- Footer -->
         <footer>
-            <div class="footer">
-                <p>Created by Alina, Jin Young (Alex) and Nathan</p>
+            <div class="container-fluid padding">
+            <div class="row text-center">
+                <div class="col-md-12">
+                    <p>Created by Alina, Jin Young (Alex) and Nathan</p>
+                    <hr class="light">
+                </div>
+            </div>
             </div>
         </footer>
 
