--- a/home-bs.html
+++ b/home-bs.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Coll[a]ge</title>
+	<title>Coll[A]ge</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -17,7 +17,7 @@
         <!-- Navigation -->
         <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Coll[a]ge</a>
+            <a class="navbar-brand" href="#">Coll[A]ge</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,10 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">GPA Calculator</a>
+                        <a class="nav-link" href="./home-bs.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./page1-bs.html">GPA Calculator</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Stress Calculator</a>
@@ -45,16 +48,12 @@
 
         </header>
             
-
-        <!--- Jumbotron -->
-
-
         <!--- Welcome Section -->
 
         <div class="container-fluid padding">
         <div class="row welcome text-center padding">
             <div class="col-12">
-                <h1 class="display-4">Coll[a]ge: A Collage for College.</h1>
+                <h1 class="display-4">Coll[A]ge: A Collage for College</h1>
             </div>   
             <p class="lead"> This website is made as a student guide to surviving college. With all of the stress and activities 
                 going on, this website is meant to make a student's life easier and more organized. Calculate your grades, 
@@ -62,9 +61,6 @@
         </div>
         <hr class="light">
         </div>
-
-        <!--- Three Column Section -->
-
 
         <!--- Two Column Section -->
         <div class="container-fluid padding">
