All the pages have been updated in the bs template

--- a/home-bs.html
+++ b/home-bs.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="./page1-bs.html">GPA Calculator</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Stress Calculator</a>
+                        <a class="nav-link" href="./page2-bs.html">Stress Calculator</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Page 3</a>
@@ -135,7 +135,8 @@
             <div class="container-fluid padding">
             <div class="row text-center">
                 <div class="col-md-12">
-                    <p>Created by Alina, Jin Young (Alex) and Nathan</p>
+                    <hr class="light">
+                    <h6>&copy; Created by Alina, Jin Young (Alex) and Nathan</h6>
                     <hr class="light">
                 </div>
             </div>
