--- a/page1-bs.html
+++ b/page1-bs.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="./page1-bs.html">GPA Calculator</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Stress Calculator</a>
+                        <a class="nav-link" href="./page2-bs.html">Stress Calculator</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Page 3</a>
@@ -51,21 +51,22 @@
         <!--- Welcome Section -->
 
         <div class="container-fluid padding">
-        <div class="row welcome text-center padding">
-            <div class="col-12">
-                <h1 class="display-4">GPA Calculator</h1>
-            </div>   
-            <p class="lead"> Input your score in the given function and it wil calculate the how much percent 
-                    you need for your next exam in order to get your desired score!</p>
-        </div>
-        <hr class="light">
-        </div>
+            <div class="row welcome text-center padding">
+                <div class="col-12">
+                    <h1 class="display-4">GPA Calculator</h1>
+                </div>   
+                <p class="lead"> The GPA Calculator we have created will help you to realize what grades you need to
+                    increase your grade by another letter. Once you have found out your results, make sure to work
+                    hard! Your work will pay off real soon! </p>
+            </div>
+            <hr class="light">
+            </div>
         
         <!--- Two Column Section -->
         <div class="container-fluid padding">
         <div class="row padding">
             <div class="col-lg-12">
-                <h2>How to use this GPA Calculator!</h2>
+                <h2>How to use this GPA Calculator</h2>
                 <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
                     Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
                     Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
@@ -195,7 +196,8 @@
             <div class="row text-center">
                 <div class="col-md-12">
                     <hr class="light">
-                    <h5>&copy; Created by Alina, Jin Young (Alex) and Nathan</h5>
+                    <h6>&copy; Created by Alina, Jin Young (Alex) and Nathan</h6>
+                    <hr class="light">
                 </div>
             </div>
             </div>
