--- a/page1-bs.html
+++ b/page1-bs.html
@@ -83,14 +83,10 @@
 
                 <h4>Class Name:</h4>
                 <input type="text" id="className" value="">
-                <h4>Category 1 Grade:</h4>
-                <input id="g1" value="">
-                <h4>Category 2 Grade:</h4>
-                <input id="g2" value="">
-                <h4>Category 1 Weight:</h4>
-                <input  id="p1" value="">
-                <h4>Category 2 Weight:</h4>
-                <input id="p2" value="">
+                <h4>Category 1 Grade & Weight:</h4>
+                <input id="g1" value=""> <input id="p1" value="">
+                <h4>Category 2 Grade & Weight:</h4>
+                <input id="g2" value=""> <input id="p2" value="">
                 <h4>Final Weight (Optional):</h4>
                 <input id="finalex" value="">
                 <br>
