--- a/page1-bs.html
+++ b/page1-bs.html
@@ -66,12 +66,8 @@
         <div class="container-fluid padding">
         <div class="row padding">
             <div class="col-lg-12">
-                <h2>How to use this GPA Calculator</h2>
-                <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
+                <h2>How to use the GPA Calculator</h2>
+                <p>Input the relevant info into the fields bellow to find out your current grade as well as what you need on your next assignemnet to get your desired grade! Please input numbers greater than 0 and input percentages out of 100.</p>
                     <hr class="light">
             </div>   
         </div>
