--- a/home-bs.html
+++ b/home-bs.html
@@ -15,7 +15,7 @@
 
     <body>
         <!-- Navigation -->
-        <nav class="navbar navbar-expand-md navbar-light sticky-top">
+        <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Coll[A]ge</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse"
