--- a/home-bs.html
+++ b/home-bs.html
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="./page2-bs.html">Stress Calculator</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">College Tips</a>
+                        <a class="nav-link" href="./page3-bs.html">College Tips</a>
                     </li>    
 
                 </ul>
