added a photo of myself

--- a/page1-bs.html
+++ b/page1-bs.html
@@ -73,7 +73,7 @@
         </div>
         </div>
 
-        <section id="JavaScript Test">
+        <section id="JavaScript_Test">
             <div class="para">
 
 
