--- a/page3-bs.html
+++ b/page3-bs.html
@@ -71,11 +71,8 @@
         <div class="row padding">
             <div class="col-lg-12">
                 <h2>Tips?</h2>
-                <p>Because Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7pJJZ3bKCrqhb_jGY2c6u9Ms8BW_zXQY1BUl9i7bdKTwgul098g" alt "uh oh">
+                    <button class="btn">Button</button>
                     <hr class="light">
             </div>   
         </div>
