--- a/home-bs.html
+++ b/home-bs.html
@@ -100,6 +100,7 @@
         <div class="row padding">
             <div class="col-md-4">
                 <div class="card">
+                    <img class="card-imd-top" src="alina.png">
                     <div class="card-body">
                         <h4 class="card-title">Alina</h4>
                         <p class="card-text">Hi my name is Alina and I'm a sophomore attending University of Massachusetts
@@ -111,6 +112,7 @@
             </div>
             <div class="col-md-4">
                     <div class="card">
+                        <img class="card-imd-top" src="alex.png">
                         <div class="card-body">
                             <h4 class="card-title">Alex</h4>
                             <p class="card-text">Hi my name is Alex and I'm a freshman attending Boston University!
@@ -120,6 +122,7 @@
                 </div>
             <div class="col-md-4">
                     <div class="card">
+                        <img class="card-imd-top" src="nathan.png">
                         <div class="card-body">
                             <h4 class="card-title">Nathan</h4>
                             <p class="card-text">Hi my name is Nathan and I'm a sophomore attending University of Massachusetts
@@ -135,9 +138,7 @@
             <div class="container-fluid padding">
             <div class="row text-center">
                 <div class="col-md-12">
-                    <hr class="light">
-                    <h6>&copy; Created by Alina, Jin Young (Alex) and Nathan</h6>
-                    <hr class="light">
+                    <h6>&copy; Coll[A]ge</h6>
                 </div>
             </div>
             </div>
