--- a/page2-bs.html
+++ b/page2-bs.html
@@ -359,9 +359,7 @@
             <div class="container-fluid padding">
             <div class="row text-center">
                 <div class="col-md-12">
-                    <hr class="light">
-                    <h6>&copy; Created by Alina, Jin Young (Alex) and Nathan</h6>
-                    <hr class="light">
+                    <h6>&copy; Coll[a]ge</h6>
                 </div>
             </div>
             </div>
