--- a/page3-bs.html
+++ b/page3-bs.html
@@ -95,9 +95,7 @@
             <div class="container-fluid padding">
             <div class="row text-center">
                 <div class="col-md-12">
-                    <hr class="light">
-                    <h6>&copy; Created by Alina, Jin Young (Alex) and Nathan</h6>
-                    <hr class="light">
+                    <h6>&copy; Coll[A]ge</h6>
                 </div>
             </div>
             </div>
