--- a/page2-bs.html
+++ b/page2-bs.html
@@ -13,7 +13,6 @@
 </head>
 <body>
 
-    <body>
         <!-- Navigation -->
         <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
         <div class="container-fluid">
@@ -345,21 +344,11 @@
                 </div>
             </section>
 
-        <!--- Fixed background -->
-        <figure>
-            <div class="fixed-wrap">
-                <div id="fixed">
-                </div>
-            </div>
-        </figure>
-        
-
-        <!--- Footer -->
         <footer>
             <div class="container-fluid padding">
             <div class="row text-center">
                 <div class="col-md-12">
-                    <h6>&copy; Coll[a]ge</h6>
+                    <h6>&copy; Coll[A]ge</h6>
                 </div>
             </div>
             </div>
@@ -367,3 +356,4 @@
 
 </body>
 </html>
+
