fix stress calc function

--- a/page2-bs.html
+++ b/page2-bs.html
@@ -54,9 +54,11 @@
                 <div class="col-12">
                     <h1 class="display-4">Stress Calculator</h1>
                 </div>   
-                <p class="lead"> The Stress Calculator implemented in this website for which we have created will help you to realize 
-                    your stress levels. Make sure you are not too stressed or else it will impact you in the long term.
-                    Your mental health matters part of your college life! Exercise! </p>
+                <p class="lead"> The Perceived Stress Scale (PSS) is a classic stress assessment instrument which measures personal stress and 
+                    helps us understand how different types of situations affect our emotion. The following questions, adapted from the State of
+                    New Hampshire, EAP, will ask about your feelings and thoughts during your last month. The number you receive from this calculator
+                    is your PSS.
+                </p>
             </div>
             <hr class="light">
             </div>
@@ -66,11 +68,10 @@
         <div class="row padding">
             <div class="col-lg-12">
                 <h2>How to use the Stress Calculator</h2>
-                <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
+                <p>Answer all the questions below and submit your answer. It will then return your PSS value, and will determine whether if you are
+                    stressed or not. The best approacj to the PSS assessment is to answer the questions relatively quickly and treat each question
+                    separately.
+                </p>
                     <hr class="light">
             </div>   
         </div>
