--- a/page1-bs.html
+++ b/page1-bs.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Coll[a]ge</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-	<link href="style-bs.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Coll[a]ge</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <link href="style-bs.css" rel="stylesheet">
 </head>
 <body>
 
@@ -31,10 +31,10 @@
                         <a class="nav-link" href="./page1-bs.html">GPA Calculator</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./page2-bs.html">Stress Calculator</a>
+                        <a class="nav-link" href="#">Stress Calculator</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./page3-bs.html">College Tips</a>
+                        <a class="nav-link" href="#">Page 3</a>
                     </li>    
 
                 </ul>
@@ -51,38 +51,45 @@
         <!--- Welcome Section -->
 
         <div class="container-fluid padding">
-            <div class="row welcome text-center padding">
-                <div class="col-12">
-                    <h1 class="display-4">GPA Calculator</h1>
-                </div>   
-                <p class="lead"> The GPA Calculator we have created will help you to realize what grades you need to
-                    increase your grade by another letter. Once you have found out your results, make sure to work
-                    hard! Your work will pay off real soon! </p>
-            </div>
-            <hr class="light">
-            </div>
+        <div class="row welcome text-center padding">
+            <div class="col-12">
+                <h1 class="display-4">GPA Calculator</h1>
+            </div>   
+            <p class="lead"> Input your score in the given function and it wil calculate the how much percent 
+                    you need for your next exam in order to get your desired score!</p>
+        </div>
+        <hr class="light">
+        </div>
         
         <!--- Two Column Section -->
         <div class="container-fluid padding">
         <div class="row padding">
             <div class="col-lg-12">
-                <h2>How to use the GPA Calculator</h2>
-                <p>Input the relevant info into the fields bellow to find out your current grade as well as what you need on your next assignemnet to get your desired grade! Please input numbers greater than 0 and input percentages out of 100.</p>
+                <h2>How to use this GPA Calculator!</h2>
+                <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum 
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
                     <hr class="light">
             </div>   
         </div>
         </div>
 
-        <section id="JavaScript_Test">
+        <section id="JavaScript Test">
             <div class="para">
 
 
                 <h4>Class Name:</h4>
                 <input type="text" id="className" value="">
-                <h4>Category 1 Grade & Weight:</h4>
-                <input id="g1" value=""> <input id="p1" value="">
-                <h4>Category 2 Grade & Weight:</h4>
-                <input id="g2" value=""> <input id="p2" value="">
+                <h4>Category 1 Grade:</h4>
+                <input id="g1" value="">
+                <h4>Category 2 Grade:</h4>
+                <input id="g2" value="">
+                <h4>Category 1 Weight:</h4>
+                <input  id="p1" value="">
+                <h4>Category 2 Weight:</h4>
+                <input id="p2" value="">
                 <h4>Final Weight (Optional):</h4>
                 <input id="finalex" value="">
                 <br>
@@ -119,7 +126,8 @@
             <div class="container-fluid padding">
             <div class="row text-center">
                 <div class="col-md-12">
-                    <h6>&copy; Coll[A]ge</h6>
+                    <hr class="light">
+                    <h5>&copy; Created by Alina, Jin Young (Alex) and Nathan</h5>
                 </div>
             </div>
             </div>
@@ -132,4 +140,3 @@
     </body>
 
 </html>
-
